# yournal.py

./: LICENSE  README.md  pyproject.toml  template.md  yournal.py
yournal/: __main__.py  yournal.py
