[tool.poetry]
name = "yournal"
version = "0.1.0"
description = "Fast (y)ournal to make Daily Notes on your terminal."
authors = ["Rikiub <rikiub.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
