[tool.poetry]
name = "yournal"
version = "1.1.1"
description = "Fast (y)ournal script to make daily notes from your terminal."
authors = ["Rikiub <rikiub.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Rikiub/yournal.py"
keywords = ["journal", "daily", "notes", "script"]

[tool.poetry.scripts]
yournal = "yournal.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
